# nimble

./: .coveragerc  .gitignore  .pylintrc  MANIFEST.in  README  README.md  __init__.py  add_wheels_install.py  configuration.c  configuration.ini  configuration.py  conftest.py  copy_to_drive.py  datafileAssumptions  docHelpers.py  exceptions.c  exceptions.py  helpers.c  helpers.py  importExternalLibraries.c  importExternalLibraries.py  lint.py  metrics.py  pre-commit  prep_for_colab.py  prep_for_collab.py  pyproject.toml  pytest.ini  randomness.c  randomness.py  remove_source.py  runTests.c  runTests.py  runners.py  setup.py  sparse.py  testProf.c  testProf.py  uMLLog-20140507.mr  uMLLog-20140507.txt  (+6 more)
UML/: __init__.py  configuration.py  core.py  exceptions.py  helpers.py  importExternalLibraries.py  randomness.py  uml.py
applications/: HOWTO_allow_imports  allowImports.py  approvalExample.py  approvalReplication.py  approvalTopProportionTests.py  corpusProcessing.py  crossValidateExample.py  crossValidateExampleB.py  crossValidateFoldTest.py  dataPrepExample.py  dataReporterTests.py  fileIOExample.py  fullPipeLineExample  fullPipeLineExample.py  kNearestRuns.py  newImportsExample.py  normalizingExample.py  rawDataToBaseDataTest2.py  rawDataToTestExample.py  runAndTestSegFault.py  scoreVsLabel.py  sparseExample.py  sparseShogunExample.py  spencer.py  spencer2.py
calculate/: __init__.py  confidence.py  linalg.py  loss.py  matrix.py  similarity.py  statistic.py  utility.py
changelogs/: v0.2.0  v0.3.0
combinations/: Combinations.py  CrossValidate.py  OrderedCrossValidate.py  __init__.py
conda_recipe/: bld.bat  build.sh  meta.yaml
customLearners/: __init__.py  custom_learner.py  knn_classification.py  mean_constant.py  multioutput_linear_regression.py  multioutput_ridge_regression.py  ridge_regression.py
cython/: base.pyx  base_setup.py  matrix.pyx  matrix_setup.py
data/: __init__.py  axis.py  axis_view.py  base.pxd  base.py  base_data.py  base_view.c  base_view.py  coo_sparse_data.py  dataFrameAxis.py  dataFrameElements.py  dataFrameFeaturesAxis.py  dataFramePointsAxis.py  dataHelpers.py  dataframe.c  dataframe.py  dataframeAxis.py  dataframeElements.py  dataframeFeatures.py  dataframePoints.py  dense.py  dense_matrix_data.py  elements.py  elements_view.py  features.py  features_view.py  list.c  list.py  listAxis.py  listElements.py  listFeatures.py  listFeaturesAxis.py  listPoints.py  listPointsAxis.py  matrix.c  matrix.py  matrixAxis.py  matrixElements.py  matrixFeatures.py  matrixFeaturesAxis.py  (+16 more)
datasets/: 10points2columns.mtx  Academic_Cons_Survey_445_points copy.csv  Academic_Cons_Survey_Merged.xlsx  adult_income_classification_tiny.csv  adult_income_classification_tinyTEST.csv  adult_income_classification_tinyTRAIN.csv  adult_income_classification_tiny_numerical.csv  appleStock.csv  automobile.csv  concrete_compressive.csv  concrete_slump.csv  data from second study - introversion - stimulation - deliberation.csv  housing.csv  noisy-linear.csv  o-ring-erosion.csv  servo.csv  smallSparse.mtx  sparseSampleReal.mtx  sparseSampleRealAsCsv.csv  spencerTest.csv  test.csv
distribution/: UML-0.0.0-py2.py3-none-any.whl  UML-0.0.0.dev1-py2.py3-none-any.whl  setup.py
documentation/: Makefile  add_wheels_install.py  generate_cheatsheets.py  publish_gh-pages.py  requirements.txt  testingAndNosetests  universal_interface_notes  update_cheatsheet-pdf.py  update_colab.py
examples/: HOWTO_allow_imports  allowImports.py  approvalExample.py  approvalReplication.py  approvalTopProportionTests.py  corpusProcessing.py  crossValidateExample.py  crossValidateExampleB.py  crossValidateFoldTest.py  dataPrepExample.py  dataReporterTests.py  fileIOExample.py  fullPipeLineExample.py  kNearestRuns.py  loadLargeFile.py  logisticRegressionCoefficientSelection.py  logisticRegressionQuietRevolution.py  newImportsExample.py  normalizingExample.py  normalizingExampleB.py  plottingExample.py  rawDataToBaseDataTest2.py  rawDataToTestExample.py  ridgeRegressionCustom.py  runAndTestSegFault.py  scoreVsLabel.py  sparseExample.py  sparseShogunExample.py  spencer.py  spencer2.py  spencerSurveyQuestionPicker.py  tableString.py  trainAndApplySegFault.py
fill/: __init__.py  fill.py
hookScripts/: .coveragerc  pre-commit  update
interfaces/: __init__.py  _collect_completed.py  custom_learner.py  custom_learner_interface.py  interfaceHOWTO  interface_helpers.py  keras_interface.py  mahout_interface.py  mahout_interface_lookalike.py  mahout_interface_old.py  mlpy_interface.py  mlpy_interface_lookalike.py  mlpy_interface_old.py  mlpy_patches.py  regressors_interface.py  regressors_interface_lookalike.py  regressors_interface_old.py  ridge_regression.py  scikit_learn_interface.py  scikit_learn_interface_lookalike.py  scikit_learn_interface_old.py  selection_dummy.py  shogun_interface.py  shogun_interface_lookalike.py  shogun_interface_old.py  universal_interface.py  universal_interface_lookalike.py
logger/: __init__.py  data_set_analyzer.py  human_readable_log.py  log_manager.py  logger_helpers.py  machine_readable_log.py  stopwatch.py  tableString.py  uml_logger.py
logging/: __init__.py  data_set_analyzer.py  human_readable_log.py  human_readable_test.py  log_manager.py  logger.py  machine_readable_log.py  machine_readable_test.py  stopwatch.py  tableString.py  uml_logger.py
match/: __init__.py  match.py
nimble/: __init__.py  _configuration.py  _dependencies.py  _utility.py  configuration.py  core.py  custom_learner.py  docHelpers.py  exceptions.py  helpers.py  importExternalLibraries.py  randomness.py  utility.py
performance/: metric_functions.py  performance_interface.py  runner.py
processing/: __init__.py  base_data.py  coo_sparse_data.py  csc_sparse_data.py  dense_matrix_data.py  row_list_data.py  sparse_data.py
read/: ClassLabelMap.py  __init__.py  convert_to_base.py  data_loading.py  dok_data_set.py  text_processing.py
tests/: __init__.py  assertionHelpers.py  callExamplesAsMainTest.py  callLandingPageExamplesAsMain.py  callManualScriptsAsMainTest.py  crossValidateTest.py  (+36 more)
(+720 files in other folders)
