[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
    "wheel",
    "cython>=0.29",
]


[project]
name = "nimble"
authors = [
        { name="Spark Wave LLC", email="willfind@gmail.com" },
        ]
description = "Interfaces and tools for data science."
requires-python = ">=3.7"
license = {text = "Proprietary"}
classifiers = [
        'Development Status :: 3 - Alpha',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Operating System :: OS Independent',
        'License :: Other/Proprietary License',
        ]
dynamic = ['version']
dependencies = [
        'numpy>=1.14, <1.24',
        'packaging>=20.0,<=21.3'
        ]


[project.optional-dependencies]
data = [
        'pandas>=0.24',
        'scipy>=1.1,<1.9'
        ]
operation = [
        'matplotlib>=3.1',
        'cloudpickle>=1.0',
        'requests>2.12',
        'h5py>=2.10',
        'python-dateutil>=2.6',
        'hyperopt>=0.2',
        'storm_tuner'
        ]
interfaces = [
        'scikit-learn>=1.0',
        'tensorflow>=1.14',
        'keras>=2.0',
        'autoimpute>=0.12'
        ]
quickstart = [
        'pandas>=0.24',
        'scipy>=1.1,<1.9',
        'matplotlib>=3.1',
        'cloudpickle>=1.0',
        'requests>2.12',
        'h5py>=2.10',
        'python-dateutil>=2.6',
        'hyperopt>=0.2',
        'storm_tuner',
        'scikit-learn>=1.0'
        ]
all = [
        'pandas>=0.24',
        'scipy>=1.1,<1.9',
        'matplotlib>=3.1',
        'cloudpickle>=1.0',
        'requests>2.12',
        'h5py>=2.10',
        'python-dateutil>=2.6',
        'hyperopt>=0.2',
        'storm_tuner',
        'scikit-learn>=1.0',
        'tensorflow>=1.14',
        'keras>=2.0',
        'autoimpute>=0.12',
        ]


[project.urls]
"Homepage" = "https://willfind.github.io/nimble/index.html"


[tool.setuptools]
packages = ["nimble"]


[tool.setuptools.dynamic]
version = {attr = "nimble.__version__"}


[tool.cibuildwheel]
test-requires = "pytest"
test-command = "python runTests.py {project}/tests"
