[build-system]
build-backend = "setuptools.build_meta"
# setuptools req needed for pyproject.toml support
requires = [
    "setuptools>=61.0",
    "cython>=0.29",
]


[project]
name = "nimble"
authors = [
        { name="Spark Wave LLC", email="info@sparkwave.tech" },
        ]
description = "Interfaces and tools for data science."
readme = {file="README.md", content-type="text/markdown"}
requires-python = ">=3.8, <3.13"
license = {text = "Apache 2.0"}
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Operating System :: OS Independent',
        'License :: OSI Approved :: Apache Software License',
        ]
dynamic = ['version']
dependencies = [
        'numpy>=1.14',
        'packaging>=20.0',
        'tomli>=2.0',
        'scipy>=1.1'
        ]


[project.optional-dependencies]
data = [
        'pandas>=0.24',
        'scipy>=1.1'
        ]
operation = [
        'matplotlib>=3.1',
        'cloudpickle>=1.0',
        'requests>2.12',
        'h5py>=2.10',
        'python-dateutil>=2.6',
        'hyperopt>=0.2',
        'storm_tuner'
        ]
interfaces = [
        'scikit-learn>=1.0',
        'tensorflow>=2.0',
        'keras>=2.4',
        'autoimpute>=0.12'
        ]
quickstart = [
        'pandas>=0.24',
        'scipy>=1.1',
        'matplotlib>=3.1',
        'cloudpickle>=1.0',
        'requests>2.12',
        'h5py>=2.10',
        'python-dateutil>=2.6',
        'hyperopt>=0.2',
        'storm_tuner',
        'scikit-learn>=1.0'
        ]
all = [
        'pandas>=0.24',
        'scipy>=1.1',
        'matplotlib>=3.1',
        'cloudpickle>=1.0',
        'requests>2.12',
        'h5py>=2.10',
        'python-dateutil>=2.6',
        'hyperopt>=0.2',
        'storm_tuner',
        'scikit-learn>=1.0',
        'tensorflow>=2.0',
        'keras>=2.4',
        'autoimpute>=0.12',
        ]


[project.urls]
"Homepage" = "https://www.nimbledata.org"
"Repository" = "https://github.com/willfind/nimble"


[tool.setuptools.packages.find]
# automatic discovery fails because of the other modules top level
# (documentation, tests, etc.) so we use a simple custom discovery
# instead, where everything within nimble (caught by a "nimble"
# prefaced glob) is included, so long as it is in a module with
# an __init__.py (caused by namespaces=false).
where = [""]
include = ["nimble*"]
namespaces = false


[tool.setuptools.dynamic]
version = {attr = "nimble.__version__"}


[tool.cibuildwheel]
# No 32 bit builds, no pypy builds, no musl linux builds
skip = ["*-win32", "*-manylinux_i686", "pp*", "*-musllinux_*"]

# Test Env: nimble[all] with pytest and pylint
#test-requires = ['pytest', 'pylint']
#test-extras = ['all']
#test-command = "pytest {project}/tests/landingPage || true"

[tool.cibuildwheel.macos]
# make sure mac wheels include capability to install on arm
archs = ["universal2"]
